them manh.css va sua style.css sua news_details.html

--- a/news_details.html
+++ b/news_details.html
@@ -5,7 +5,7 @@
         <title>Family today</title>
         <link href="css/bootstrap.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-        <link href="trung.css" rel="stylesheet">
+        <link href="manh.css" rel="stylesheet">
     </head> 
     <body>
         <div class="header-main">
@@ -84,7 +84,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
-                        <div class="page-breadcrumb">
+                        <div class="page-breadcrumb clearfix">
                             <div id="crumbs">                                
                                 <a href="#">Đời sống</a> 
                                 <span class="delimiter-breadcrumbs delimeter-a">&nbsp;</span>
@@ -93,49 +93,138 @@
                                 <span class="current">Quan hệ vợ chồng</span>
                             </div>
                         </div>
-                        
+
                         <h1>Thời cơ có 'một không hai' của bé dưới 1 tuổi</h1>
                         <p>Chủ nhật, ngày20/02/2015, 11:00</p>
                         <div class="content-post">
                             Khi nuôi dạy trẻ, điều cần nhất là phải biết làm mọi chuyện vào đúng thời điểm của nó. Các hướng dẫn dưới đây sẽ giúp bố mẹ nhận ra những “cánh cửa thần kỳ” để giúp con chuyển tiếp qua những giai đoạn phát triển thuận lợi hơn.
 
-Tìm ra những “cánh cửa thần kỳ” cho sự chuyển tiếp giai đoạn của từng đứa trẻ, từ việc tạm biệt núm vú cao su cho đến chuyện bỏ bánh sơ cua của xe đạp ra là thực sự quan trọng nhưng lại rất hay bị bố mẹ “bỏ quên” và rồi sau này lại tiếc nuối vì cơ hội đã qua. Vì vậy hãy đánh dấu ngay vào lịch của bạn đi – chúng tôi đã tham vấn các chuyên gia về thời điểm lí tưởng để thực hiện gần như mọi thứ rồi đây.
+                            Tìm ra những “cánh cửa thần kỳ” cho sự chuyển tiếp giai đoạn của từng đứa trẻ, từ việc tạm biệt núm vú cao su cho đến chuyện bỏ bánh sơ cua của xe đạp ra là thực sự quan trọng nhưng lại rất hay bị bố mẹ “bỏ quên” và rồi sau này lại tiếc nuối vì cơ hội đã qua. Vì vậy hãy đánh dấu ngay vào lịch của bạn đi – chúng tôi đã tham vấn các chuyên gia về thời điểm lí tưởng để thực hiện gần như mọi thứ rồi đây.
 
-Bé dưới 1 tuổi
+                            Bé dưới 1 tuổi
 
-Thời cơ #1 - 2 đến 4 tuần tuổi: Cho bé tập bú bình
-
-
-Để bố tập cho con bú bình hóa ra lại là cách rất hay mẹ ạ! - Ảnh: Inmagine
-
-Tập cho em bé nhỏ xíu mới sinh của bạn bú bình khi bé mới vừa quen bú mẹ có thể khiến bé bối rối, thậm chí khiến bé từ chối núm vú của bạn. Thực tế, đây là tình huống khiến nhiều bà mẹ rối trí nhất khi con họ hoặc bỏ sữa mẹ, hoặc không chịu bú bình dẫn đến những vất vả khôn lường về sau cho mẹ khi cho bé ăn. Hầu hết các bác sĩ nhi đồng ý rằng bạn nên cho bé làm quen với việc bú bình trước khi tròn 1 tháng tuổi. Nếu bạn để qua thời điểm đó, con bạn có thể sẽ không chịu hợp tác nữa. Và bạn có biết rằng sẽ rất tốt nếu bạn để bố bé giúp bạn tập bú bình cho bé?
-
-Chiến thuật khôn ngoan:Nếu có ý định hút sữa thường xuyên, bạn nên mua một chiếc máy hút sữa bằng điện có khả năng hút hai bên cùng 1 lúc để tiết kiệm thời gian. Hãy sử dụng máy sau khi cho con bú vào buổi sáng, khi lượng sữa của bạn đang ở đỉnh điểm. Và hãy nhớ rời khỏi phòng khi bố hoặc bà của bé cho bé bú bình lần đầu tiên, vì con bạn có thể không chịu bú bình nếu thấy có bạn gần đó.
-
-Thời cơ #2 - 4 đến 6 tháng tuổi: Tập cho bé ngủ suốt đêm
-
-Khi đến tuổi này, đa số các bé không cần cho bú lúc nửa đêm nữa và có thể tự ngủ lại được. Con bạn cũng có thể như thế nếu bạn duy trì một thời khoá biểu thông thường mỗi chiều.
-
-Còn nếu không, đây là thời điểm huấn luyện cho con về thói quen ngủ, cho dù bằng cách để yên cho bé khóc, hay dỗ dành bé mỗi năm phút và kéo giãn thời gian giữa những đợt thăm chừng ra. Nếu bạn đợi đến khoảng 8 tháng tuổi, con bạn sẽ nhớ được là bạn hay đến mỗi khi bé vòi, như vậy bé sẽ trở nên nhõng nhẽo hơn và bạn sẽ khó mà cải thiện được tình hình.
-
-Chiến thuật khôn ngoan: Nếu con bạn không thể tự ngủ được, hãy cho con vào giường sớm trước khi bé mệt mỏi quấy khóc. Bạn cũng có thể mua một chiếc máy tạo âm thanh êm dịu hay rèm tối treo trong phòng để chặn các âm thanh và ánh sáng có thể gây khó khăn cho việc ngủ của bé.
-
-Thời cơ #3 - 7 đến 9 tháng tuổi: Uống bằng ly có vòi
-
-Con bạn có thể chưa uống được ngay, nhưng bạn cũng nên đặt một chiếc ly có hai quai cầm bên cạnh ghế ăn của bé trong mỗi bữa ăn. Bằng cách tập luyện cộng với sự động viên, bé sẽ tìm ra cách uống nước từ ly có vòi, và điều đó sẽ khiến bé cai bú bình dễ dàng hơn nhiều.
+                            Thời cơ #1 - 2 đến 4 tuần tuổi: Cho bé tập bú bình
 
 
-Tập cho bé uống nước bằng ly có vòi đúng thời điểm sẽ giúp dễ cai bú bình cho bé về sau - Ảnh: Inmagine
+                            Để bố tập cho con bú bình hóa ra lại là cách rất hay mẹ ạ! - Ảnh: Inmagine
 
-Chiến thuật khôn ngoan: Nếu con bạn gặp khó khăn khi uống ly có vòi, hãy thử bỏ van chống tràn ra. Có thể hơi bừa bộn một tí, nhưng cách đó sẽ khiến bé uống dễ dàng hơn nhiều, và sau này chuyển sang uống ly thường cũng dễ nữa. Ngoài nước, hãy cho sữa bột hoặc sữa mẹ vào trong ly có vòi để con bạn cảm thấy thoải mái hơn khi uống sữa từ ly một khi bé đã cai bú.
+                            Tập cho em bé nhỏ xíu mới sinh của bạn bú bình khi bé mới vừa quen bú mẹ có thể khiến bé bối rối, thậm chí khiến bé từ chối núm vú của bạn. Thực tế, đây là tình huống khiến nhiều bà mẹ rối trí nhất khi con họ hoặc bỏ sữa mẹ, hoặc không chịu bú bình dẫn đến những vất vả khôn lường về sau cho mẹ khi cho bé ăn. Hầu hết các bác sĩ nhi đồng ý rằng bạn nên cho bé làm quen với việc bú bình trước khi tròn 1 tháng tuổi. Nếu bạn để qua thời điểm đó, con bạn có thể sẽ không chịu hợp tác nữa. Và bạn có biết rằng sẽ rất tốt nếu bạn để bố bé giúp bạn tập bú bình cho bé?
 
-Thời cơ #4 - Khoảng 6 tháng tuổi: Bắt đầu ăn dặm
+                            Chiến thuật khôn ngoan:Nếu có ý định hút sữa thường xuyên, bạn nên mua một chiếc máy hút sữa bằng điện có khả năng hút hai bên cùng 1 lúc để tiết kiệm thời gian. Hãy sử dụng máy sau khi cho con bú vào buổi sáng, khi lượng sữa của bạn đang ở đỉnh điểm. Và hãy nhớ rời khỏi phòng khi bố hoặc bà của bé cho bé bú bình lần đầu tiên, vì con bạn có thể không chịu bú bình nếu thấy có bạn gần đó.
 
-Dù cho mẹ bạn có cho bạn ăn sữa pha nước cơm hay ngũ cốc trong bình từ lúc mới sinh đi nữa thì con bạn có thể bị nghẹn vì những thức ăn đặc và có nhiều nguy cơ bị dị ứng thức ăn hơn nếu tiếp xúc với thức ăn đặc quá sớm. Hãy đợi cho đến khi bé gần 6 tháng tuổi, và tìm những dấu hiệu cho thấy bé đã sẵn sàng để ăn dặm: Bé có khả năng ngồi thẳng dậy nếu được giúp đỡ, kiểm soát đầu tốt, cho đồ vào miệng, và tỏ ra hứng thú với những thứ mà bạn ăn. Đừng đợi lâu hơn 6 tháng tuổi, vì con bạn cần có chất sắt trong ngũ cốc dành cho trẻ em cũng như lượng calories cộng thêm từ thức ăn.
+                            Thời cơ #2 - 4 đến 6 tháng tuổi: Tập cho bé ngủ suốt đêm
+
+                            Khi đến tuổi này, đa số các bé không cần cho bú lúc nửa đêm nữa và có thể tự ngủ lại được. Con bạn cũng có thể như thế nếu bạn duy trì một thời khoá biểu thông thường mỗi chiều.
+
+                            Còn nếu không, đây là thời điểm huấn luyện cho con về thói quen ngủ, cho dù bằng cách để yên cho bé khóc, hay dỗ dành bé mỗi năm phút và kéo giãn thời gian giữa những đợt thăm chừng ra. Nếu bạn đợi đến khoảng 8 tháng tuổi, con bạn sẽ nhớ được là bạn hay đến mỗi khi bé vòi, như vậy bé sẽ trở nên nhõng nhẽo hơn và bạn sẽ khó mà cải thiện được tình hình.
+
+                            Chiến thuật khôn ngoan: Nếu con bạn không thể tự ngủ được, hãy cho con vào giường sớm trước khi bé mệt mỏi quấy khóc. Bạn cũng có thể mua một chiếc máy tạo âm thanh êm dịu hay rèm tối treo trong phòng để chặn các âm thanh và ánh sáng có thể gây khó khăn cho việc ngủ của bé.
+
+                            Thời cơ #3 - 7 đến 9 tháng tuổi: Uống bằng ly có vòi
+
+                            Con bạn có thể chưa uống được ngay, nhưng bạn cũng nên đặt một chiếc ly có hai quai cầm bên cạnh ghế ăn của bé trong mỗi bữa ăn. Bằng cách tập luyện cộng với sự động viên, bé sẽ tìm ra cách uống nước từ ly có vòi, và điều đó sẽ khiến bé cai bú bình dễ dàng hơn nhiều.
+
+
+                            Tập cho bé uống nước bằng ly có vòi đúng thời điểm sẽ giúp dễ cai bú bình cho bé về sau - Ảnh: Inmagine
+
+                            Chiến thuật khôn ngoan: Nếu con bạn gặp khó khăn khi uống ly có vòi, hãy thử bỏ van chống tràn ra. Có thể hơi bừa bộn một tí, nhưng cách đó sẽ khiến bé uống dễ dàng hơn nhiều, và sau này chuyển sang uống ly thường cũng dễ nữa. Ngoài nước, hãy cho sữa bột hoặc sữa mẹ vào trong ly có vòi để con bạn cảm thấy thoải mái hơn khi uống sữa từ ly một khi bé đã cai bú.
+
+                            Thời cơ #4 - Khoảng 6 tháng tuổi: Bắt đầu ăn dặm
+
+                            Dù cho mẹ bạn có cho bạn ăn sữa pha nước cơm hay ngũ cốc trong bình từ lúc mới sinh đi nữa thì con bạn có thể bị nghẹn vì những thức ăn đặc và có nhiều nguy cơ bị dị ứng thức ăn hơn nếu tiếp xúc với thức ăn đặc quá sớm. Hãy đợi cho đến khi bé gần 6 tháng tuổi, và tìm những dấu hiệu cho thấy bé đã sẵn sàng để ăn dặm: Bé có khả năng ngồi thẳng dậy nếu được giúp đỡ, kiểm soát đầu tốt, cho đồ vào miệng, và tỏ ra hứng thú với những thứ mà bạn ăn. Đừng đợi lâu hơn 6 tháng tuổi, vì con bạn cần có chất sắt trong ngũ cốc dành cho trẻ em cũng như lượng calories cộng thêm từ thức ăn.
+                        </div>
+                        <div class="content-tag">
+                            <i class="icon-tags">&nbsp;</i>
+                            <div class="tags-content">
+                                <a href="#">Bé ăn dặm,,</a>
+                                <a href="#">  bé tập bú,</a>
+                                <a href="#">  6 tháng</a>
+                                <a href="#">  uống nước</a>
+                            </div>
+                        </div>
+                        <div class="header-comment">
+                            <i class="icon-comment">&nbsp;</i>
+                            <p>Bình luận bài viết</p>
+                        </div>
+                        <div class="content-comment">
+
                         </div>
                     </div>
                     <div class="col-md-4">
-                                
+                        <div class="advantising-sidebar">
+                            <img src="images/image-logo.png" />  
+                        </div>
+
+                        <div class="sidebar-new-news">
+                            <h3 class="widget-title">QUAN HỆ XÃ HỘI</h3>
+                            <ul>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="sidebar-new-news">
+                            <h3 class="widget-title">CÂU CHUYỆN CUỘC SỐNG</h3>
+                            <ul>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="sidebar-box">
+                            <h3 class="box-title">CHUYÊN ĐỀ</h3>
+                            <ul>
+                                <li class="pull-left">
+                                    <a href="#"><img class="icon-silebar-box" src="images/icon-silebar-box.png"/><h4>Chuyên đề Sức khỏe và thời trang</h4></a>
+                                </li>
+                                <li class="pull-left">
+                                    <a href="#"><img class="icon-silebar-box" src="images/icon-silebar-box.png"/><h4>Chuyên đề Sức khỏe và thời trang</h4></a>
+                                </li>
+                                <li class="pull-left">
+                                    <a href="#"><img class="icon-silebar-box" src="images/icon-silebar-box.png"/><h4>Chuyên đề Sức khỏe và thời trang</h4></a>
+                                </li>
+                                <li class="pull-left">
+                                    <a href="#"><img class="icon-silebar-box" src="images/icon-silebar-box.png"/><h4>Chuyên đề Sức khỏe và thời trang</h4></a>
+                                </li>
+
+
+                            </ul>
+                        </div>
+                        <div class="wap-facebook">
+                            <div class="content-facebook">
+                                <div id="fb-root"></div>
+                                <script>(function (d, s, id) {
+                                        var js, fjs = d.getElementsByTagName(s)[0];
+                                        if (d.getElementById(id))
+                                            return;
+                                        js = d.createElement(s);
+                                        js.id = id;
+                                        js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.0";
+                                        fjs.parentNode.insertBefore(js, fjs);
+                                    }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like-box" data-href="https://www.facebook.com/FacebookDevelopers" data-width="300px" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
