sua file manh.css trung.css style.css news_details.html news_list.html

--- a/news_list.html
+++ b/news_list.html
@@ -6,6 +6,7 @@
         <link href="css/bootstrap.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
         <link href="trung.css" rel="stylesheet">
+        <link href="manh.css" rel="stylesheet">
     </head> 
     <body>
         <div class="header-main">
@@ -233,8 +234,83 @@
                         </div>
 
                     </div>
-                    <div class="col-md-4">
+   <div class="col-md-4 col-xs-4 col-sm-4">
+                        <div class="advantising-sidebar">
+                            <img src="images/image-logo.png" />  
+                        </div>
 
+                        <div class="sidebar-new-news">
+                            <h3 class="widget-title">QUAN HỆ XÃ HỘI</h3>
+                            <ul>
+                                <li class="clearfix">
+                                    <a href="#">
+                                        <img class="image-silebar pull-left" src="images/icon-silebar.png"/>
+                                        <h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="sidebar-new-news">
+                            <h3 class="widget-title">CÂU CHUYỆN CUỘC SỐNG</h3>
+                            <ul>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#"><img class="image-silebar pull-left" src="images/icon-silebar.png"/><h4>Bí quyết để CEO Yahoo làm ra 500 triệu USD ở tuổi 39</h4></a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="sidebar-box">
+                            <h3 class="box-title">CHUYÊN ĐỀ</h3>
+                            <ul>
+                                <li class="pull-left">
+                                    <a href="#"><img class="icon-silebar-box" src="images/icon-silebar-box.png"/><h4>Chuyên đề Sức khỏe và thời trang</h4></a>
+                                </li>
+                                <li class="pull-left">
+                                    <a href="#"><img class="icon-silebar-box" src="images/icon-silebar-box.png"/><h4>Chuyên đề Sức khỏe và thời trang</h4></a>
+                                </li>
+                                <li class="pull-left">
+                                    <a href="#"><img class="icon-silebar-box" src="images/icon-silebar-box.png"/><h4>Chuyên đề Sức khỏe và thời trang</h4></a>
+                                </li>
+                                <li class="pull-left">
+                                    <a href="#"><img class="icon-silebar-box" src="images/icon-silebar-box.png"/><h4>Chuyên đề Sức khỏe và thời trang</h4></a>
+                                </li>
+
+
+                            </ul>
+                        </div>
+                        <div class="wap-facebook">
+                            <div class="content-facebook">
+                                <div id="fb-root"></div>
+                                <script>(function (d, s, id) {
+                                        var js, fjs = d.getElementsByTagName(s)[0];
+                                        if (d.getElementById(id))
+                                            return;
+                                        js = d.createElement(s);
+                                        js.id = id;
+                                        js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.0";
+                                        fjs.parentNode.insertBefore(js, fjs);
+                                    }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like-box" data-href="https://www.facebook.com/FacebookDevelopers" data-width="300px" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -245,7 +321,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-7">
-                        <ul class="content-menu-header">
+                        <ul class="content-menu-footer">
                             
                             <li><a href="#">Đời sống</a></li>
                             <li><a href="#">Vợ & Chồng</a></li>
@@ -258,7 +334,7 @@
                         </ul>
                     </div>
                     <div class="col-md-5">
-                        <ul class="content-menu-header">
+                        <ul class="content-menu-footer">
                             <li class="pull-right"><a href="#">Liên hệ toà soạn </a></li>
                         </ul>
                     </div>
@@ -278,11 +354,11 @@
                         <p>Giấy phép số 220/GP-TTĐT ; Cục QL phát thanh truyền hình và thông</p>
                     </div>
                     <div class="col-md-2">
-                        <p class="footer-right pull-right">Powered by<span class="Powered "> ANWeb </span></p>
+                        <a href="#"><p class="footer-right pull-right">Powered by<span class="Powered "> ANWeb </span></p></a> 
                     </div>
                 </div>
             </div>
-            <div class="icon-footer"><img src="images/icon-footer.png"></div>
+            <div class="icon-footer"><a href="#"><img src="images/icon-footer.png"></a></div>
         </div>
         <script src="js/jquery-1.11.2.min.js"></script>
         <script src="js/bootstrap.js"></script>
