sua news_list.html

--- a/news_list.html
+++ b/news_list.html
@@ -28,7 +28,7 @@
         <div class="menu-header">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                         <ul class="content-menu-header">
                             <li id="li-home-menu"><a href="#"><i class="icon-home"></i></a></li>
                             <li><a href="#">Đời sống</a></li>
@@ -53,13 +53,13 @@
         <div class="after-menu-header">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-xs-6">
                         <div class="wrap-popular-new-header">
                             <b>Tin Nóng:</b>
                             <a href="">Tóc Tiên sexy hết cỡ tập vũ đạo với Lâm Vinh Hải</a>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-xs-6">
                         <div class="wrap-search-header pull-right">
                             <form role="search" method="get" class="search-form" action="">
                                 <label class="pull-left">
@@ -84,7 +84,7 @@
         <div class="main-news-list main-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-sm-8 col-xs-8">
                         <div class="page-breadcrumb clearfix">
                             <div id="crumbs">                                
                                 <a href="#">Đời sống</a> 
@@ -320,7 +320,7 @@
         <div class="footer-header">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-7 col-xs-7">
                         <ul class="content-menu-footer">
                             
                             <li><a href="#">Đời sống</a></li>
@@ -333,7 +333,7 @@
                             
                         </ul>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-5 col-sm-5 col-xs-5">
                         <ul class="content-menu-footer">
                             <li class="pull-right"><a href="#">Liên hệ toà soạn </a></li>
                         </ul>
@@ -354,7 +354,7 @@
                         <p>Giấy phép số 220/GP-TTĐT ; Cục QL phát thanh truyền hình và thông</p>
                     </div>
                     <div class="col-md-2">
-                        <a href="#"><p class="footer-right pull-right">Powered by<span class="Powered "> ANWeb </span></p></a> 
+                        <a href="#"><p class="footer-right pull-right">Powered by<span class="Powered "> ANWeb </span></p></a>
                     </div>
                 </div>
             </div>
