--- a/index.html
+++ b/index.html
@@ -186,7 +186,12 @@
                             <div class="row">
                                 <div class="col-md-12 col-xs-12 col-sm-12">
                                     <div class="header-box-new-home">
-                                        sdfg
+                                        <a href="#">đời sống</a>
+                                        <a href="#">Câu chuyện cuộc sống</a>
+                                        <a href="#">trải nghiệm</a>
+                                        <a href="#">nhân vật</a>
+                                        <a href="#">Công sở</a>
+                                        <a href="#">Xem ăn chơi</a>
                                     </div>
                                     <div class="content-box-new-home">
                                         <div class="main-news  pull-left">
@@ -245,15 +250,15 @@
                         </div>
                         <!--End box new home-->
 
-                        <div class="box-images">
+                        <div class="box-images-advertising">
                             <img src="images/img4.png"/>
                         </div>
 
                         <div class="box-ad-home">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="header-box-ad-home">
-
+                                    <div class="header-box-new-home">
+                                        <a href="#">TÌNH YÊU - HÔN NHÂN</a>
                                     </div>
                                     <ul>
                                         <li>
@@ -270,9 +275,9 @@
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="header-box-ad-home">
-
-                                    </div>
+                                    <div class="header-box-new-home">
+                                        <a href="#">sức khỏe</a>
+                                    </div>  
                                     <ul>
                                         <li>
                                             <a href="#">
@@ -293,7 +298,10 @@
                             <div class="row">
                                 <div class="col-md-12 col-xs-12 col-sm-12">
                                     <div class="header-box-new-home">
-                                        sdfg
+                                        <a href="#">Mẹ và bé</a>
+                                        <a href="#">mang thai</a>
+                                        <a href="#">làm mẹ</a>
+                                        <a href="#">chuyên gia</a>                                        
                                     </div>
                                     <div class="content-box-new-home">
                                         <div class="main-news  pull-left">
@@ -354,9 +362,9 @@
                         <div class="box-ad-home">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="header-box-ad-home">
-
-                                    </div>
+                                    <div class="header-box-new-home">
+                                        <a href="#">sức khỏe</a>
+                                    </div>  
                                     <ul>
                                         <li>
                                             <a href="#">
@@ -372,9 +380,9 @@
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="header-box-ad-home">
-
-                                    </div>
+                                    <div class="header-box-new-home">
+                                        <a href="#">sức khỏe</a>
+                                    </div>  
                                     <ul>
                                         <li>
                                             <a href="#">
